test_suite5/ALAN/test_suite/alan-2022-examples/failing/006980_mutation.alan
source t0 begin put do 9 end
